--- a/style.css
+++ b/style.css
@@ -2,6 +2,29 @@
     --light-card-color: linear-gradient(0deg, rgba(140,130,124,1) 0%, rgba(222,205,195,1) 3%, rgb(240, 234, 231) 97%, rgba(140,130,124,1) 100%);
 }
 
+@media only print {
+    .refcard,
+    .card {
+        transform: scale(0.93);
+        position: relative;
+        top: -6mm;
+    }
+
+    .refcardback {
+        position: relative;
+        left: -4.5mm;
+    }
+
+    .refcard {
+        left: 2mm;
+    }
+
+    .boxtitle {
+        display: none;
+    }
+
+}
+
 body {
     /*background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(151,53,36,1) 50%, rgba(0,0,0,1) 100%);*/
     font-family: 'Crimson Text', serif;
@@ -21,8 +44,9 @@ h1,h2 {
     border: 2px solid black;
     width: 16mm;
     height: 16mm;
+    position: relative;
+    left: 50%;
     text-align: center;
-    float: right;
 }
 
 .button {
@@ -35,17 +59,6 @@ h1,h2 {
 .button:hover{
     background: rgba(151,53,36,1);
 }
-
-.form {
-    border: 1.5mm solid black;
-    background: #d6d2ce;
-    position: relative;
-    width: 270mm;
-    margin: 3mm 25mm 10mm 0mm;
-    padding: 5mm;
-    box-sizing: border-box;
-}
-
 
 .upperbar{
     width: 270mm;
@@ -62,27 +75,17 @@ h1,h2 {
 .boxtitle{
     background: #e7aa3c;
     position: relative;
-    border: 1.5mm solid black;
-    top: -6mm;
-    width: 200mm;
-    right: 6mm;
-    display: table-cell;
+    border-top: 1.5mm solid black;
+    border-bottom: 1.5mm solid black;
     vertical-align: middle;
     padding-left: 5mm;
 }
 
+.refcard,
 .card {
     margin-bottom: 0.2mm;
     margin-left: 1mm;
 }
-
-@media print {
-    .card {
-        transform: scale(0.93);
-    }
-
-}
-
 
 .titletext {
     color: white;
@@ -113,6 +116,14 @@ h1,h2 {
     margin-right: 0.2mm;
 }
 
+.refcardback {
+    width: 63mm;
+    box-sizing: border-box;
+    font-family: 'IBM Plex Sans', sans-serif;
+    float: left;
+    margin-left: -0.9mm;
+}
+
 .storycard-divider {
     height: 0.8mm;
     background: linear-gradient(90deg, rgba(130,130,130,1) 0%, rgba(255,255,255,1) 37%, rgba(255,255,255,1) 53%, rgba(130,130,130,1) 100%);
@@ -124,6 +135,8 @@ h1,h2 {
     border-top-left-radius: 12px;
     height: 10mm;
 }
+
+.refcard-subtitle,
 .storycardfront-subtitle{
     height: 3mm;
     background: black;
@@ -142,6 +155,7 @@ h1,h2 {
     
 }
 
+.refcardfront-prologuetext,
 .storycardfront-prologuetext{
     padding: 3mm;
     color: black;
@@ -166,6 +180,7 @@ h1,h2 {
     position: relative;
 }
 
+.refcardsetuptext,
 .setuptext{
     font-size: 8px;
     position: relative;
