--- a/style.css
+++ b/style.css
@@ -161,6 +161,7 @@ h1,h2 {
     padding: 3mm;
     color: black;
     font-family: 'IBM Plex Sans', sans-serif;
+    font-style: normal;
     font-size: 8px;
 }
 
