--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@
     --light-card-color: linear-gradient(0deg, rgba(140,130,124,1) 0%, rgba(222,205,195,1) 3%, rgb(240, 234, 231) 97%, rgba(140,130,124,1) 100%);
 }
 
+.ui-page
+{
+background: #000;
+background-image:url("Street Masters background.png");
+background-size:cover;
+}
+
 @media only print {
     .refcard,
     .card {
@@ -90,18 +97,7 @@ h1,h2 {
 }
 
 .titletext {
-    color: white;
     font-family: 'Yanone Kaffeesatz', sans-serif;
-    bottom: 0;
-    position: relative;
-    box-sizing: border-box;
-    height: 10mm;
-    padding-top: 3mm;
-    padding-bottom: 1mm;
-    display: table-cell;
-    font-size: 26px;
-    font-weight: 200;   
-    border: 2pt solid transparent;
 }
 
 .story {
