--- a/style.css
+++ b/style.css
@@ -1,10 +1,26 @@
 
-.ui-page
-{
+.ui-page {
 background: #000;
 background-image:url("Street Masters background.png");
 background-size:cover;
 }
+
+@media print {
+
+    #printcards {
+        background: white !important;
+        background-image:none;
+        }
+
+    #printcards-header {
+        display: none;
+        }
+    
+    #printcards-footer {
+        display: none;
+        }
+
+  }
 
 .cardbg {
     background:url("Street Masters card background.png");
@@ -31,10 +47,17 @@ background-size:cover;
         text-shadow: none !important;
         }
 
+    .mobile-card-title{ 
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-family: 'Yanone Kaffeesatz', sans-serif
+    }
+
     .ui-dialog-contain{
         background: #000;
-background-image:url("Street Masters background.png");
-background-size:cover;
+        background-image:url("Street Masters background.png");
+        background-size:cover;
     }
 
     #players-button, #storylength-button {
@@ -43,4 +66,262 @@ background-size:cover;
         border: 2pt solid rgba(255,255,255,1);
     }
 
+    .print-card-container {
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: column;
+        width: 63mm;
+        min-height: 87mm;
+        max-height: 87mm;
+        position: relative;
+      }
+      
+      .storycard-divider {
+          flex-basis: 0.8mm;
+          background: linear-gradient(90deg, rgba(130,130,130,1) 0%, rgba(255,255,255,1) 37%, rgba(255,255,255,1) 53%, rgba(130,130,130,1) 100%);
+      }
+      
+      .storycardfront-title{
+          background: linear-gradient(90deg, rgba(78,74,62,1) 0%, rgba(59,56,46,1) 10%, rgba(3,2,2,1) 100%);
+          border-top-right-radius: 12px;
+          border-top-left-radius: 12px;
+          height: 10mm;
+          font-family: 'Yanone Kaffeesatz', sans-serif;
+          font-size: 28px;
+          box-sizing: border-box;
+          padding-top: 2mm;
+      }
+      
+      .refcard-subtitle,
+      .storycardfront-subtitle{
+          min-height: 3mm;
+          background: black;
+          font-style: italic;
+          font-size: 7px;
+          color: #d6d2ce;
+          box-sizing: border-box;
+          padding-left: 17mm;
+          padding-top: 0.5mm;
+          padding-right: 2mm;
+      }
+      
+      
+      .storycardfront-prologue{
+          flex: 3;
+          background:url("Street Masters card background.png");
+          background-size:cover;
+          overflow: hidden;
+          padding: 3mm 3mm 1mm 3mm;
+          color: black;
+          font-family: 'IBM Plex Sans', sans-serif;
+          font-style: italic;
+          font-size: 9px;
+          text-shadow: none;
+      }
+      
+      .storycardfront-setup{
+          background: linear-gradient(90deg, rgba(78,74,62,1) 0%, rgba(59,56,46,1) 10%, rgba(3,2,2,1) 100%);
+          border-bottom-right-radius: 12px;
+          border-bottom-left-radius: 12px;
+          font-family: 'IBM Plex Sans Condensed', sans-serif;
+          flex: 1; 
+          color: #d6d2ce;
+          padding-left: 2mm;
+          padding-top: 1.5mm;
+          padding-bottom: 2mm;
+          padding-right: 2mm;
+          font-size: 10px;
+          font-weight: 100;
+          position: relative;
+          text-shadow: none !important;
+      }
+      
+      .circleicon {
+        float: left; 
+        position: relative; 
+        z-index: 1;
+        top: -2.5mm;
+      }
+      .circle-outer,
+      .circle-middle,
+      .circle-inner {
+          display: inline-block;
+          border-radius: 50%;
+          float: none;
+          z-index: 1;
+      }
+      
+      .circle-outer {
+          height: 13mm;
+          width: 13mm;
+          background: linear-gradient(180deg, rgba(221,221,221,1) 0%, rgba(51,51,51,1) 100%);
+          margin-top: 3mm;
+          margin-left: 2.2mm;
+      }
+      
+      .circle-middle {
+          height: 10.5mm;
+          width: 10.5mm;
+          background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 100%);
+          margin-top: 1.25mm;
+          margin-left: 1.25mm;
+      }
+      
+      .circle-inner {
+          height: 10mm;
+          width: 10mm;
+          background: black;
+          margin-top: 0.25mm;
+          margin-left: 0.25mm;
+      }
+      
+      .expansionicon{
+          position: absolute;
+          float: right;
+          bottom:2mm;
+          right: 2mm;
+          width: 4mm;
+          height: 2mm;
+      }
+      
+      .infinity{
+          margin-left: 50mm;
+          float: right;
+      }
+      
+      .infinity-before,
+      .infinity-after {
+          position: absolute;
+          box-sizing: border-box;
+          width: 2mm;
+          height: 2mm;
+          border: 0.5mm solid white;
+          border-radius: 50px 50px 0px 50px;
+          transform: rotate(-45deg);
+      }
+      .infinity-after {
+          border-radius: 50px 50px 50px 0;
+          transform: rotate(45deg);
+          margin-left: 2mm;
+      }
+      
+      
 
+      .storycardback-bar-top{
+        background: linear-gradient(90deg, rgba(78,74,62,1) 0%, rgba(59,56,46,1) 10%, rgba(3,2,2,1) 100%);
+        border-top-right-radius: 12px;
+        border-top-left-radius: 12px;
+        height: 3mm;
+    }
+    
+    
+    .storycardback-titlebar{
+        height: 6mm;
+        width: 63mm;
+        -webkit-clip-path: polygon(0 0, 100% 0%, 100% 32%, 80.5% 32%, 75.5% 100%, 24.5% 100%, 19.5% 32%, 0% 32%);
+        clip-path: polygon(0 0, 100% 0%, 100% 32%, 80.5% 32%, 75.5% 100%, 24.5% 100%, 19.5% 32%, 0% 32%);
+        background: linear-gradient(90deg, rgba(130,130,130,1) 0%, rgba(255,255,255,1) 37%, rgba(255,255,255,1) 53%, rgba(130,130,130,1) 100%);
+        position: absolute;
+        z-index: 2;
+    }
+    
+    .storycardback-epiloguetitle {
+        height: 5mm;
+        position: relative;
+        font-family: 'IBM Plex Sans Condensed', sans-serif;
+        font-size: 9px;
+        background: #30271B;
+        top: 0.4mm;
+        font-style: italic;
+        padding: 1mm 15mm 0mm;
+        color: #d6d2ce;
+        box-sizing: border-box;
+        -webkit-clip-path: polygon(0 0, 100% 0%, 100% 20%, 80% 20%, 75% 100%, 25% 100%, 20% 20%, 0% 20%);
+        clip-path: polygon(0 0, 100% 0%, 100% 20%, 80% 20%, 75% 100%, 25% 100%, 20% 20%, 0% 20%);
+        z-index: 2;
+        text-align: center;
+        overflow: auto;
+    }
+    
+    .storycardback-colorbar-back {
+        float: none;
+        width: 60.5mm;
+        height: 1.5mm;
+        background: linear-gradient(90deg, rgba(130,130,130,1) 0%, rgba(255,255,255,1) 37%, rgba(255,255,255,1) 53%, rgba(130,130,130,1) 100%);
+        position: absolute;
+        left: 1mm;
+        -webkit-clip-path: polygon(0 0, 100% 0, 95% 100%, 5% 100%);
+        clip-path: polygon(0 0, 100% 0, 95% 100%, 5% 100%);
+        z-index: 1;
+    }
+    
+    .storycardback-colorbar-red,
+    .storycardback-colorbar-green {
+        float: none;
+        width: 58mm;
+        height: 1mm;
+        position: absolute;
+        -webkit-clip-path: polygon(0 0, 100% 0, 96% 100%, 4% 100%);
+        clip-path: polygon(0 0, 100% 0, 96% 100%, 4% 100%);
+        z-index: 1;
+        left: 2.2mm;
+    
+    }
+    
+    .storycardback-colorbar-red {
+         background: #c4331a;
+    }
+    
+    .storycardback-colorbar-green {
+        background: #0a612b;
+    }
+    
+    .storycardback-epilogue-bottom,
+    .storycardback-epilogue-top{
+        flex: 1;
+        background:url("Street Masters card background.png");
+        background-size:cover;
+        overflow: auto;
+        color: black;
+        font-family: 'IBM Plex Sans', sans-serif;
+        font-style: italic;
+        box-sizing: border-box;
+        font-style: italic;
+        padding: 7.5mm 3mm 3mm 3mm;
+        font-size: 10px;
+        text-shadow: none;
+    }
+    
+    .storycardback-bar-bottom{
+        background: linear-gradient(90deg, rgba(78,74,62,1) 0%, rgba(59,56,46,1) 10%, rgba(3,2,2,1) 100%);
+        border-bottom-right-radius: 12px;
+        border-bottom-left-radius: 12px;
+        height: 3mm; 
+        color: #d6d2ce;
+        font-size: 9px;
+        font-weight: 100;
+        position: relative;
+    }
+    
+    .storycardback-bottomtitle{
+        background:url("Advance.png");
+        background-size:cover;
+        height: 6mm;
+        width: 29mm;
+        position: relative;
+        left: 17mm;
+        bottom: 3mm;
+        box-sizing: border-box;
+        color: black;
+        font-style: italic;
+        font-weight: bold;
+        font-family: 'IBM Plex Sans Condensed', sans-serif;
+        padding-top: 2mm;
+        text-align: center;
+        font-size: 8px;
+        -webkit-clip-path: polygon(20.5% 0%, 79.5% 0%, 100% 100%, 0% 100%);
+        clip-path: polygon(20.5% 0%, 79.5% 0%, 100% 100%, 0% 100%);
+        z-index: 1;
+        text-shadow: none;
+    }
+    
