--- a/style.css
+++ b/style.css
@@ -20,7 +20,17 @@ background-size:cover;
         display: none;
         }
 
+   .print-card-container {
+        position:relative;
+        page-break-inside: auto;
+    }
   }
+
+.card-both-sides {
+    margin: 1mm;
+    display: flex;
+    flex-direction: row;
+}
 
 .cardbg {
     background:url("Street Masters card background.png");
@@ -90,6 +100,8 @@ background-size:cover;
           font-size: 28px;
           box-sizing: border-box;
           padding-top: 2mm;
+          padding-left: 15mm;
+          text-align: center;
       }
       
       .refcard-subtitle,
@@ -107,7 +119,7 @@ background-size:cover;
       
       
       .storycardfront-prologue{
-          flex: 3;
+          flex: 4;
           background:url("Street Masters card background.png");
           background-size:cover;
           overflow: hidden;
@@ -138,9 +150,9 @@ background-size:cover;
       
       .circleicon {
         float: left; 
-        position: relative; 
+        position: absolute; 
         z-index: 1;
-        top: -2.5mm;
+        top: -1mm;
       }
       .circle-outer,
       .circle-middle,
@@ -240,7 +252,7 @@ background-size:cover;
         clip-path: polygon(0 0, 100% 0%, 100% 20%, 80% 20%, 75% 100%, 25% 100%, 20% 20%, 0% 20%);
         z-index: 2;
         text-align: center;
-        overflow: auto;
+        overflow: hidden;
     }
     
     .storycardback-colorbar-back {
@@ -278,10 +290,10 @@ background-size:cover;
     
     .storycardback-epilogue-bottom,
     .storycardback-epilogue-top{
-        flex: 1;
+        height: 41mm;
         background:url("Street Masters card background.png");
         background-size:cover;
-        overflow: auto;
+        overflow: hidden;
         color: black;
         font-family: 'IBM Plex Sans', sans-serif;
         font-style: italic;
