Card text fit improvement, story elements

--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@ background-size:cover;
           font-family: 'IBM Plex Sans', sans-serif;
           font-style: italic;
           font-size: 9px;
+          line-height: 1.4;
           text-shadow: none;
       }
       
@@ -309,6 +310,7 @@ background-size:cover;
         font-style: italic;
         padding: 7.5mm 3mm 3mm 3mm;
         font-size: 10px;
+        line-height: 1.4;
         text-shadow: none;
     }
     
